# Engine

./: CMakeLists.txt  build.ninja
assets/shaders/: default.frag  default.vert
include/: Camera.h  Texture.h  VAO.h  shader.h
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: Camera.cpp  Texture.cpp  VAO.cpp  main.cpp  shader.cpp
